--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "html-entities": "^2.5.2",
     "react": "18.2.0",
-    "react-native": "0.71.0"
+    "react-native": "0.71.0",
+    "react-native-webview": "^13.10.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
